fix: increase the width of the task name (item__label) to align the layout to the pattern

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body {
   width: 226px;
 }
 .block-list__item > .item__input.task {
-  width: 226px;
+  width: 360px;
 }
 .delete-img {
   height: 2em;
